--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title>Module 4 Solution</title>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
-  <h2>Module 4 Solution Starter</h2>
-  <p>open console to see the output</p>
+  <h2>Module 4 Solution by Praveena</h2>
+  <p>open console to see the output (click ctrl+shift+j)</p>
 </body>
 </html>
